--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="black1">#FF1a1a1a</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white1">#F0F0F0F0</color>
     <color name="red">#FFFF0000</color>
 </resources>
