--- a/app/src/main/res/drawable/bgcolor.xml
+++ b/app/src/main/res/drawable/bgcolor.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!--实现应用背景颜色渐变-->
     <gradient
-        android:startColor="@color/cover_blue"
-        android:endColor="@color/cover_green"
+        android:startColor="@color/gray_blue"
+        android:endColor="@color/black1"
         android:angle="0"/>
 </shape>
