--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="black1">#FF1a1a1a</color>
+    <color name="black1">#FF252525</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white1">#F0F0F0F0</color>
     <color name="red">#FFFF0000</color>
     <color name="cover_blue">#FF85A4AC</color>
     <color name="cover_green">#FF85C48C</color>
     <color name="no_color">#00FFFFFF</color>
+    <color name="gray_blue">#FF252529</color>
+    <color name="gray_green">#FF121612</color>
 </resources>
